GearsetPOC/force-app/main/default/objects/Amex_to_Eurostar_Detail__c/Amex_to_Eurostar_Detail__c.object-meta.xml
<CustomObject>
    <label>Amex to Eurostar Detail</label>
    <nameField>
        <displayFormat>ATED-{0000000000}</displayFormat>
        <label>Amex to Eurostar Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amex to Eurostar Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>