GearsetPOC/force-app/main/default/objects/Amex_to_Eurostar_Detail__c/fields/Activity_timestamp__c.field-meta.xml
<CustomField>
    <fullName>Activity_timestamp__c</fullName>
    <label>Activity timestamp</label>
    <length>6</length>
    <type>Text</type>
</CustomField>