GearsetPOC/force-app/main/default/objects/Amex_to_Eurostar_Detail__c/fields/Batch_Type__c.field-meta.xml
<CustomField>
    <fullName>Batch_Type__c</fullName>
    <label>Batch Type</label>
    <length>3</length>
    <type>Text</type>
</CustomField>