GearsetPOC/force-app/main/default/objects/Amex_to_Eurostar_Detail__c/fields/Currency_Alpha_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Alpha_Code__c</fullName>
    <label>Currency Alpha Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>