GearsetPOC/force-app/main/default/objects/Amex_to_Eurostar_Detail__c/fields/Detail_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Detail_Record_ID__c</fullName>
    <label>Detail Record ID</label>
    <length>1</length>
    <type>Text</type>
</CustomField>