GearsetPOC/force-app/main/default/objects/Amex_to_Eurostar_Detail__c/fields/Eurostar_Loyalty_Number__c.field-meta.xml
<CustomField>
    <fullName>Eurostar_Loyalty_Number__c</fullName>
    <label>Eurostar Loyalty Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>