GearsetPOC/force-app/main/default/objects/Amex_to_Eurostar_Detail__c/fields/External_Bill_No__c.field-meta.xml
<CustomField>
    <fullName>External_Bill_No__c</fullName>
    <label>External Bill No</label>
    <length>3</length>
    <type>Text</type>
</CustomField>