GearsetPOC/force-app/main/default/objects/Amex_to_Eurostar_Detail__c/fields/File_Sequence_number__c.field-meta.xml
<CustomField>
    <fullName>File_Sequence_number__c</fullName>
    <label>File Sequence number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>