GearsetPOC/force-app/main/default/objects/Amex_to_Eurostar_Detail__c/fields/Number_of_points__c.field-meta.xml
<CustomField>
    <fullName>Number_of_points__c</fullName>
    <label>Number of points</label>
    <length>7</length>
    <type>Text</type>
</CustomField>