GearsetPOC/force-app/main/default/objects/Amex_to_Eurostar_Detail__c/fields/Parent_Partner_Code__c.field-meta.xml
<CustomField>
    <fullName>Parent_Partner_Code__c</fullName>
    <label>Partner Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>