GearsetPOC/force-app/main/default/objects/Amex_to_Eurostar_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Status_Message__c</columns>
    <columns>Activity_Start_date__c</columns>
    <columns>Batch_Type__c</columns>
    <columns>Activity_timestamp__c</columns>
    <columns>Eurostar_Loyalty_Number__c</columns>
    <columns>Detail_Record_ID__c</columns>
    <columns>External_Bill_No__c</columns>
    <columns>Market_Code__c</columns>
    <columns>Number_of_points__c</columns>
    <columns>Supplier__c</columns>
    <columns>Sending_System__c</columns>
    <columns>Parent_Partner_Code__c</columns>
    <columns>Activity_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>